# ringring-rs

./: Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: call.rs  lib.rs  main.rs
src/handler/: voice.rs
src/model/: activity.rs  mod.rs  participant.rs  room.rs  room_manager.rs
src/service/: asset.rs  mod.rs  report.rs  tracker.rs
src/service/renderer/: mod.rs  timeline.rs  transformer.rs  view.rs
src/service/renderer/timeline/: layout.rs  mod.rs  policy.rs
