[package]
name = "ringring-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
chrono = "0.4.42"
tiny-skia = "0.11.4"
moka = { version = "0.12", features = ["sync", "future"] }
kmeans_colors = "0.7"
palette = { version = "0.7", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
image = "0.25"
serenity = "0.12.4"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"]}
tikv-jemallocator = { version = "0.6.1", features = ["profiling"], optional = true }
cosmic-text = "0.15.0"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
